--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,48 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-family:
+    'Montserrat',
+    'Open Sans',
+    'Helvetica Neue',
+    system-ui,
+    -apple-system,
+    sans-serif;
+}
+body {
+  max-width: 1440px;
+  margin: 0.5em auto;
+}
+:root {
+  --h1-fs: 30px;
+  --h1-fw: 800;
+
+  --h2-fs: 24px;
+  --h2-fw: 700;
+
+  --h3-fs: 18px;
+  --h3-fw: 600;
+}
+
+h1 {
+  font-size: var(--h1-fs);
+  font-weight: var(--h1-extraBold);
+}
+
+h2 {
+  font-size: var(--h2-fs);
+  font-weight: var(--h2-fw);
+}
+
+h3 {
+  font-size: var(--h3-fs);
+  font-weight: var(--h3-fw);
+}
