--- a/src/global.scss
+++ b/src/global.scss
@@ -1,4 +1,5 @@
-@tailwind base;
+// Probably conflicts with mantine UI
+// @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
@@ -8,55 +9,12 @@
   box-sizing: border-box;
 }
 
-html {
-  font-family:
-    'Montserrat',
-    'Open Sans',
-    'Helvetica Neue',
-    system-ui,
-    -apple-system,
-    sans-serif;
-}
-body {
-  max-width: 1440px;
-  margin: 0.5em auto;
-}
-
-:root {
-  --h1-fs: 30px;
-  --h1-fw: 800;
-
-  --h2-fs: 24px;
-  --h2-fw: 700;
-
-  --h3-fs: 18px;
-  --h3-fw: 600;
-}
-
-h1 {
-  font-size: var(--h1-fs);
-  font-weight: var(--h1-extraBold);
-}
-
-h2 {
-  font-size: var(--h2-fs);
-  font-weight: var(--h2-fw);
-}
-
-h3 {
-  font-size: var(--h3-fs);
-  font-weight: var(--h3-fw);
-}
-li {
-  text-decoration: none;
-}
-
-//custom classes
+// ========== custom classes ==============
 .reg-btns {
   background: linear-gradient(
       180deg,
       rgba(29, 26, 152, 0.2) 0%,
-      rgba(0, 0, 0, 0) 71.15%
+      rgba(29, 26, 152, 0.2) 71.15%
     ),
     #7a77ff;
 }
